update codeclimate config to only include javascript analysis
[ci skip]

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,6 @@
+languages:
+  JavaScript: true
 exclude_paths:
-- src/lib/*
-- src/script/fe/jquery.js
-- src/script/test/*
+  - src/lib/*
+  - src/script/fe/jquery.js
+  - src/script/test/*
