make license string spdx parsable
[ci skip]

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   }, 
   "homepage": "https://sverweij.github.io/shoutingcoach",
   "author": "Sander Verweij",
-  "license": "GPLv3"
+  "license": "GPL-3.0"
 }
