--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "devDependencies": {
       "amdefine": "1.0.0",
-      "mocha": "2.3.2", 
       "codeclimate-test-reporter": "0.1.1", 
-      "jshint": "2.8.0", 
       "istanbul": "0.3.20",
-      "plato": "1.5.0", 
-      "nsp": "1.1.0"
+      "jshint": "2.8.0", 
+      "mocha": "2.3.2", 
+      "npm-check-updates": "2.2.3",
+      "nsp": "1.1.0",
+      "plato": "1.5.0" 
   },
   "scripts": {
     "test": "mocha -R dot src/script/test/",
@@ -22,6 +23,7 @@
     "plato": "plato -r -d platoreports -x \"test|jquery\" src/script/", 
     "lint": "jshint src/script --verbose --show-non-errors", 
     "codeclimate-cover-submit": "node node_modules/codeclimate-test-reporter/bin/codeclimate.js < coverage/lcov.info",
+    "npm-check-updates": "ncu --upgrade",
     "clean": "rm -rf build/style build/audio build/script build/lib build/index.html build/workouts.json",
     "build-au": "cp -R src/audio build/audio",
     "build-style": "cp -R src/style build/style",
