[upgrade] js-makedepend, npm-check-updates, nsp

--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "1.0.1",
   "description": "helps you work out",
   "dependencies": {
-    "requirejs": "2.1.20"
+    "requirejs": "2.1.22"
   },
   "devDependencies": {
     "amdefine": "1.0.0",
     "codeclimate-test-reporter": "0.1.1",
-    "istanbul": "0.4.0",
+    "istanbul": "0.4.1",
+    "js-makedepend": "0.1.10",
     "jshint": "2.8.0",
-    "mocha": "2.3.3",
-    "npm-check-updates": "2.3.4",
-    "nsp": "1.1.0",
+    "mocha": "2.3.4",
+    "npm-check-updates": "2.5.4",
+    "nsp": "2.1.0",
     "plato": "1.5.0"
   },
   "scripts": {
     "test": "mocha -R dot src/script/test/",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha src/script/test",
-    "nsp": "nsp package",
+    "nsp": "nsp check",
     "fullcheck": "npm run lint && npm run test && npm outdated && npm run nsp",
     "plato": "plato -r -d platoreports -x \"test|jquery\" src/script/",
     "lint": "jshint src/script --verbose --show-non-errors",
     "codeclimate-cover-submit": "node node_modules/codeclimate-test-reporter/bin/codeclimate.js < coverage/lcov.info",
     "npm-check-updates": "ncu --upgrade",
-    "clean": "rm -rf build/style build/audio build/script build/lib build/index.html build/workouts.json",
     "build-au": "cp -R src/audio build/audio",
     "build-style": "cp -R src/style build/style",
     "build-html": "cp src/index.html build/. && cp src/workouts.json build/.",
