--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "devDependencies": {
     "amdefine": "1.0.0",
-    "codeclimate-test-reporter": "0.1.1",
-    "istanbul": "0.4.1",
-    "js-makedepend": "0.1.10",
-    "jshint": "2.8.0",
+    "codeclimate-test-reporter": "0.2.0",
+    "istanbul": "0.4.2",
+    "js-makedepend": "0.1.11",
+    "jshint": "2.9.1",
     "mocha": "2.3.4",
     "npm-check-updates": "2.5.6",
     "nsp": "2.2.0",
@@ -24,7 +24,7 @@
     "plato": "plato -r -d platoreports -x \"test|jquery\" src/script/",
     "lint": "jshint src/script --verbose --show-non-errors",
     "codeclimate-cover-submit": "node node_modules/codeclimate-test-reporter/bin/codeclimate.js < coverage/lcov.info",
-    "npm-check-updates": "ncu '/^(?!jshint).*$/' --upgrade",
+    "npm-check-updates": "ncu --upgrade",
     "build-au": "cp -R src/audio build/audio",
     "build-style": "cp -R src/style build/style",
     "build-html": "cp src/index.html build/. && cp src/workouts.json build/.",
